Bug 91596 - WRITER "Format All Comments" doesn't set the format properly so it is lost when storing the documents
Summary: WRITER "Format All Comments" doesn't set the format properly so it is lost wh...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.3.2 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:5.4.0 target:5.3.1 target:5.2.6
Keywords: implementationError
: 95265 98356 101215 (view as bug list)
Depends on:
Blocks: Apple, because, Libre, of, Office, opening, problem, Writer-Comments
  Show dependency treegraph
 
Reported: 2015-05-25 02:22 UTC by Juanjo
Modified: 2017-02-24 18:04 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document with some comments (15.08 KB, application/vnd.oasis.opendocument.text)
2015-05-25 02:22 UTC, Juanjo
Details
All comments are equally formatted after using "Format all comments..." (46.14 KB, image/png)
2015-05-25 02:24 UTC, Juanjo
Details
Not all comments are rendered in the same way after reopening the document (61.43 KB, image/png)
2015-05-25 02:25 UTC, Juanjo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juanjo 2015-05-25 02:22:38 UTC
Created attachment 115999 [details]
Test document with some comments

Comments are formatted equally by using "Format all comments..." comment's menu option but when reopen the document is rendered in a different way (a previously chosen format)

Steps:
1. Open the attached document (test.odt)
2. Change comments format using comment's pull-down menu option "Format all comments..."
Result: all comments are displayed according to the new format
3. Save the document and exit WRITER
4. Reopen the document
Result: one comment is rendered in a different format
Comment 1 Juanjo 2015-05-25 02:24:12 UTC
Created attachment 116000 [details]
All comments are equally formatted after using "Format all comments..."
Comment 2 Juanjo 2015-05-25 02:25:09 UTC
Created attachment 116001 [details]
Not all comments are rendered in the same way after reopening the document
Comment 3 Cor Nouws 2015-05-25 09:45:02 UTC
Thanks Juanjo,

I confirm the problem in 4.4.3.2. > New
But maybe much older > bibisectrequest.
Comment 4 Terrence Enger 2015-05-27 14:36:31 UTC
Working in the 43all bibisect repository, I see ...

from `git bisect good`:

    commit ce3d21bc00b0756f1e7dbb4974db30e6d51b913b
    Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
    Date:   Tue May 20 09:12:26 2014 +0000

        source-hash-8485a276022e05bd34afb2321e72ecfad4589f7e
    
        commit 8485a276022e05bd34afb2321e72ecfad4589f7e
        Author:     Stephan Bergmann <sbergman@redhat.com>
        AuthorDate: Wed Apr 23 22:50:09 2014 +0200
        Commit:     Stephan Bergmann <sbergman@redhat.com>
        CommitDate: Wed Apr 23 22:51:37 2014 +0200
    
            Change RGB "FFFF00" -> "ffff00" to keep roundtrip test happy
    
            Change-Id: I14e48d56b6f34be31a1580d448352b925f9aadde

    :100644 100644 52c8e161352f33f6d2e0429cdcb91e958d69f5b4 bd53ed3cc9847c47658266fa59383ff0e60ebe43 M	ccache.log
    :100644 100644 7d557c85425681348b0e8bdf932a892a5f90d255 80d9656c29aca4e90745e26552bda0bbf7f7cabf M	commitmsg
    :100644 100644 b32cc3fc7ed24be9ecdddbedadaffb3c0798fa3b b465c495534db58c79ef3d68275b63fb7351e6bf M	make.log
    :040000 040000 8203b1804dbc2a02153b274b8b4164c495603b9f 21b874fef5ab6f9a92e4d5db990b06c510018458 M	opt

and from `git bisect log`

    # bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
    # good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
    git bisect start '423a84c' 'oldest'
    # good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
    git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
    # good: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
    git bisect good 4850941efe43ae800be5c76e1102ab80ac2c085d
    # good: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
    git bisect good a900e72b6357882284c5955bdf939bf14269f5fb
    # skip: [e80660c5a1d812cd04586dae1f22767fc3778c4a] source-hash-07c60c8ee2d1465544a6a39e57bc06b3690b8dfb
    git bisect skip e80660c5a1d812cd04586dae1f22767fc3778c4a
    # good: [df9bcaed2faa2a8d11b19f877cdff3a12a887278] source-hash-6ba9692d8bbe3e3c245aca9a7c928e81178d05f1
    git bisect good df9bcaed2faa2a8d11b19f877cdff3a12a887278
    # bad: [741197a13a361480f59eeb3bd1401f984f49f1c0] source-hash-9a61470eb1fa161cba70f2e9c4ea8817dc7f617e
    git bisect bad 741197a13a361480f59eeb3bd1401f984f49f1c0
    # skip: [60da347518798811f7adbfbf1eb07d59cd9f08bf] source-hash-28fc951233a58fb4d8515ed4380140aaee0afd32
    git bisect skip 60da347518798811f7adbfbf1eb07d59cd9f08bf
    # good: [0acca754077bf74469c3e1a3c7eabbc3da795266] source-hash-5e651d4084df7662b56ea980934c0428ba31b062
    git bisect good 0acca754077bf74469c3e1a3c7eabbc3da795266
    # bad: [ce3d21bc00b0756f1e7dbb4974db30e6d51b913b] source-hash-8485a276022e05bd34afb2321e72ecfad4589f7e
    git bisect bad ce3d21bc00b0756f1e7dbb4974db30e6d51b913b
    # good: [19604661a278cb5b1b513d5bcf9e12eb85f4715f] source-hash-f05861de995f8d4edb1a97c616d050f55ec04c32
    git bisect good 19604661a278cb5b1b513d5bcf9e12eb85f4715f
    # good: [cb4fd88402c426174f9cc9ff08c3b86ae84820e5] source-hash-e15223582710e9e2e31fad2f557df6ee99501fd0
    git bisect good cb4fd88402c426174f9cc9ff08c3b86ae84820e5
    # good: [e4b46548ba53a7007ed023fc2b2287c4ff9796dd] source-hash-9f06e4bc3a56806061f759770f758ad3c7ddf09c
    git bisect good e4b46548ba53a7007ed023fc2b2287c4ff9796dd
    # first bad commit: [ce3d21bc00b0756f1e7dbb4974db30e6d51b913b] source-hash-8485a276022e05bd34afb2321e72ecfad4589f7e
Comment 5 Matthew Francis 2015-09-03 05:24:14 UTC
So in fact this bug has existed since the feature was introduced in the below commit

Adding Cc: to caolanm@redhat.com. Could you possibly take a look at this one? Thanks


commit ebb728c9c01b5e86926381fa816cf69cb3eb1e37
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Apr 22 17:06:26 2014 +0100

    add a 'format all comments' feature
    
    Change-Id: Ie9530f0f58b38d014beda60b9efba3ce93fe5c0e
Comment 6 Buovjaga 2015-10-24 16:28:21 UTC
*** Bug 95265 has been marked as a duplicate of this bug. ***
Comment 7 Robinson Tryon (qubit) 2015-12-10 10:23:22 UTC Comment hidden (obsolete)
Comment 8 Buovjaga 2016-08-06 19:43:18 UTC
*** Bug 98356 has been marked as a duplicate of this bug. ***
Comment 9 Buovjaga 2016-08-06 19:43:37 UTC
*** Bug 101215 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2016-09-26 14:53:49 UTC
Adding Cc: to Caolán McNamara
Comment 11 Michael Stahl 2017-02-09 20:46:50 UTC
fixed on master
Comment 12 Commit Notification 2017-02-09 20:48:08 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd269f902b86ecb5dde0043838be14c867ee8bec

tdf#91596 sw: make Format All Comments persistent

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2017-02-13 08:29:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d507dbcd08e07af3ae6e7f5f0962e5422187087&h=libreoffice-5-2

tdf#91596 sw: make Format All Comments persistent

It will be available in 5.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Buovjaga 2017-02-13 12:26:53 UTC
Verifying it works now. Thanks!

Win 7 Pro 64-bit Version: 5.4.0.0.alpha0+
Build ID: 1d810b69a584fc33f4178c7012f68f551ba2e03b
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-02-12_23:34:02
Locale: fi-FI (fi_FI); Calc: CL