tdf#91596 sw: make Format All Comments persistent

Change-Id: I8f9a20084d2dc8abd7699f64307b81321699498c
(cherry picked from commit bd269f902b86ecb5dde0043838be14c867ee8bec)